--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "bootstrap": "4.0.0-beta",
+    "bootstrap": "4.0.0-beta.3",
+    "bootstrap-vue": "^1.4.0",
     "lodash.clonedeep": "^4.5.0",
     "vue": "^2.4.2",
     "vue-awesome": "^2.3.3",
